--- a/index.html
+++ b/index.html
@@ -1,24 +1,96 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Live Scorecard</title>
+  <title>Live Scorecard Overlay</title>
   <style>
-    body { margin: 0; font-family: sans-serif; background: #000; color: #fff; text-align: center; }
-    .watermark { position: fixed; top: 10px; left: 10px; font-size: 20px; opacity: 0.3; animation: float 6s infinite linear; }
-    .team-score { font-size: 48px; margin: 50px 0; animation: flipScore 7s infinite; }
-    .status { font-size: 24px; animation: flipStatus 4s infinite linear; }
-    @keyframes flipScore { 0% {transform: rotateY(0);} 14% {transform: rotateY(360deg);} 100% {transform: rotateY(360deg);} }
-    @keyframes flipStatus { 0% {transform: rotateX(0);} 50% {transform: rotateX(180deg);} 100% {transform: rotateX(360deg);} }
-    @keyframes float { 0% { transform: translateX(0); } 50% { transform: translateX(100vw); } 100% { transform: translateX(0); } }
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background: url('background.gif') no-repeat center center fixed;
+      background-size: cover;
+      color: #fff;
+      overflow: hidden;
+    }
+    .watermark {
+      position: absolute;
+      top: 10px;
+      left: 10px;
+      font-size: 20px;
+      opacity: 0.2;
+      animation: floatText 10s linear infinite;
+    }
+    .score-container {
+      position: absolute;
+      top: 30%;
+      left: 50%;
+      transform: translateX(-50%);
+      text-align: center;
+    }
+    .team-score {
+      font-size: 48px;
+      margin: 20px 0;
+      animation: flipScore 7s infinite;
+    }
+    .status-line {
+      position: absolute;
+      bottom: 30px;
+      width: 100%;
+      text-align: center;
+      font-size: 24px;
+      animation: flipStatus 4s infinite linear;
+    }
+    @keyframes flipScore {
+      0% { transform: rotateY(0); }
+      14% { transform: rotateY(360deg); }
+      100% { transform: rotateY(360deg); }
+    }
+    @keyframes flipStatus {
+      0% { transform: rotateX(0); }
+      50% { transform: rotateX(180deg); }
+      100% { transform: rotateX(360deg); }
+    }
+    @keyframes floatText {
+      0% { transform: translateX(0); }
+      50% { transform: translateX(100vw); }
+      100% { transform: translateX(0); }
+    }
   </style>
 </head>
 <body>
   <div class="watermark">ONLINE TV BANGLA</div>
-  <div class="team-score">Team A: 230/4</div>
-  <div class="team-score">Team B: 198/5</div>
-  <div class="status">Day 3: Bangladesh lead by 42 runs</div>
+  <div class="score-container">
+    <div class="team-score" id="team1">Loading Team 1...</div>
+    <div class="team-score" id="team2">Loading Team 2...</div>
+  </div>
+  <div class="status-line" id="status">Loading match status...</div>
+
+  <script>
+    async function fetchScore() {
+      const urlParams = new URLSearchParams(window.location.search);
+      const matchId = urlParams.get('matchId') || '1448349';
+
+      try {
+        const res = await fetch(`https://site.api.espncricinfo.com/apis/site/v2/matches/${matchId}`);
+        const data = await res.json();
+
+        const teams = data.matchTeams;
+        const scores = data.score;
+        const status = data.state;
+
+        document.getElementById('team1').innerText = `${teams[0].team.name}: ${scores[0].inningRuns}/${scores[0].inningWkts}`;
+        document.getElementById('team2').innerText = `${teams[1].team.name}: ${scores[1].inningRuns}/${scores[1].inningWkts}`;
+        document.getElementById('status').innerText = status;
+
+      } catch (e) {
+        console.error(e);
+        document.getElementById('status').innerText = 'Error fetching data';
+      }
+    }
+
+    fetchScore();
+    setInterval(fetchScore, 30000); // Refresh every 30 seconds
+  </script>
 </body>
 </html>
